--- a/.harness/harness.yaml
+++ b/.harness/harness.yaml
@@ -588,6 +588,19 @@ pipeline:
                       when:
                         stageStatus: Success
                         condition: <+codebase.build.type> == "tag"
+                  - step:
+                      name: Upload_Binaries_To_GCS
+                      identifier: Upload_Binaries_To_GCS
+                      template:
+                        templateRef: Upload_Binary_GCS_TI
+                        versionLabel: v1
+                        templateInputs:
+                          type: GCSUpload
+                          spec:
+                            sourcePath: /harness/release
+                            target: drone-buildx/<+trigger.tag>/
+                          when:
+                            condition: <+codebase.build.type> == "tag"
               platform:
                 os: Linux
                 arch: Amd64
