--- a/docker/gcr/Dockerfile.linux.amd64
+++ b/docker/gcr/Dockerfile.linux.amd64
@@ -1,4 +1,4 @@
-FROM plugins/buildx:linux-amd64
+FROM ebtasamfaridy/plugins-buildx:1
 
 ADD release/linux/amd64/drone-gcr /bin/
 ENTRYPOINT ["/usr/local/bin/dockerd-entrypoint.sh", "/bin/drone-gcr"]
