--- a/.harness/harness.yaml
+++ b/.harness/harness.yaml
@@ -251,7 +251,7 @@ pipeline:
                       name: Build Tarball
                       identifier: Build_Tarball
                       spec:
-                        connectorRef: Plugins_Docker_Hub_Connector
+                        connectorRef: devanshdocker
                         image: docker:27.3.1-dind
                         shell: Sh
                         command: sh buildkit/release.sh
